tests/parsing/smtlib/poly/errors/172_function_decl_unclosed_1.expected
File "tests/parsing/smtlib/poly/errors/172_function_decl_unclosed_1.psmt2", line 2, character 42-43:
2 | (define-funs-rec ( (foo (par (a) () bool) _ ) ))
                                              ^
Error while parsing a function declaration, read the reserved word '_',
      but expected a closing parenthesis.
